--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Promadev angular</title>
     </head>
     <body>
-        <h1>Promadev angular</h1>
+        <h1>Angular first app</h1>
     </body>
 </html>
