--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Promadev angular</title>
+        <title>Promadev</title>
     </head>
     <body>
         <h1>Angular first app</h1>
